# app/controllers/customers_controller.py
@@ -24,10 +24,10 @@ def add_customer(body):  # noqa: E501
 def delete_customer(customer_id):  # noqa: E501
     """Delete a single customer
 
-    Delete customer, based on customerId # noqa: E501
+    Delete customer, based on customer_id # noqa: E501
 
     :param customer_id: Customer to be deleted
-    :type customer_id: int
+    :type customer_id: str
 
     :rtype: None
     """
@@ -39,8 +39,8 @@ def get_customer_details(customer_id):  # noqa: E501
 
     Retrieve the details of a customer # noqa: E501
 
-    :param customer_id: The customerId
-    :type customer_id: int
+    :param customer_id: The customer_id
+    :type customer_id: str
 
     :rtype: Customer
     """
@@ -69,8 +69,8 @@ def update_customer(body, customer_id):  # noqa: E501
 
     :param body: Pet object that needs to be added to the store
     :type body: dict | bytes
-    :param customer_id: The customerId
-    :type customer_id: int
+    :param customer_id: The customer_id
+    :type customer_id: str
 
     :rtype: None
     """
