# app/controllers/transactions_controller.py
@@ -12,7 +12,7 @@ def add_transaction(account_id, body=None):  # noqa: E501
     Returns one transaction data # noqa: E501
 
     :param account_id: Id of account
-    :type account_id: int
+    :type account_id: str
     :param body: 
     :type body: dict | bytes
 
@@ -29,7 +29,7 @@ def get_transaction(transaction_id):  # noqa: E501
     Returns one transaction data # noqa: E501
 
     :param transaction_id: Id of transaction
-    :type transaction_id: int
+    :type transaction_id: str
 
     :rtype: Transaction
     """
@@ -42,7 +42,7 @@ def list_transactions(account_id):  # noqa: E501
     List all transactions belonging to an account # noqa: E501
 
     :param account_id: Id of account
-    :type account_id: int
+    :type account_id: str
 
     :rtype: List[Transaction]
     """
